# anemist

./: Cargo.toml
src/: appstate.rs  lib.rs  main.rs  models.rs  myanimelist.rs  router.rs  storage.rs
src/handlers/: create.rs  delete.rs  image.rs  index.rs  load.rs  mod.rs  save.rs
templates/: index.html
