[package]
name = "anemist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = "0.8.4"
reqwest = "0.12.23"
scraper = "0.24.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
